# DevOps-Ostad-Bach-11

./: .dockerignore  .gitignore  01-nginx-deployment.yaml  02-nginx-service.yaml  03-configmap.yaml  04-secret.yaml  05-updated-deployment.yaml  06-namespace.yaml  07-broken-deployment.yaml  APPLICATION_DEPLOYMENT.md  ARCHITECTURE.md  BRANCH_CONVENTIONS.md  CI_CD_PIPELINE.md  CI_CD_QUICK_START.md  CI_CD_SETUP_GUIDE.md  COMMANDS_REFERENCE.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_RUNBOOK.md  DEPLOYMENT_SUMMARY.md  Dockerfile  EC2_SETUP_GUIDE.md  GITHUB_SETUP_GUIDE.md  GITHUB_WORKFLOWS_REFERENCE.md  GIT_HOOKS_SETUP.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_GUIDE.md  MASTER_NODE_SETUP.md  POD_SCALING_RESULTS.md  PROJECT_CHECKLIST.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  SETUP_GUIDE.md  START_HERE.md  SUBMISSION.md  TERRAFORM_BEST_PRACTICES.md  WORKER_NODE_SETUP.md  auth.txt  (+13 more)
.github/hooks/: commit-msg  commit-msg.ps1  pre-commit  pre-commit.ps1
.github/workflows/: ci-cd-pipeline.yml  ci.yml  deploy-monitoring.yml  deploy.yml  monitoring-deploy.yml  terraform-apply.yml  terraform-destroy.yml  terraform-security.yml  terraform-validate.yml  terraform.yml
3-Tier Application on AWS EC2/: .gitignore  ARCHITECTURE.md  DEPLOYMENT-GUIDE-BMI.md  README.md  TROUBLESHOOTING.md  docker-compose.yml
data/: applications.csv
devops/: README.md
nginx-secure-app/: .gitignore  Dockerfile  QUICKSTART.md  README.md  REQUIREMENTS.md  docker-compose.yml  validate.py
public/: index.html
src/: App.js  App.test.js  setupTests.js
(+95 files in other folders)
