[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "job-search-automation"
version = "0.1.0"
description = "Local resume-driven job search automation tools"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
documents = ["pypdf>=4.0.0", "python-docx>=1.1.0"]

[project.scripts]
job-search = "job_search_automation.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
